# Audie

./: .gitignore  CLAUDE.md  LICENSE  PROJECT_SPEC.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  eslint.config.js  index.html  overlay.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.cargo/: config.toml
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: PROMPTS.md  SESSION_PLAYBOOK.md  SIGNING.md  STATUS.md  VERSIONING.md  项目规划-ARCHIVE.md
docs/specs/: recording-duration-limit.md  release-workflow.md  system-startup-dock.md
scripts/: check-release-version.mjs  dev-sign-run.sh
src/: App.tsx  i18n.tsx  index.css  overlay.tsx
src-tauri/: Cargo.toml  Info.plist  models_catalog.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: language-selector.nsh
src-tauri/prompts/: compose_default.md  enhance_default.md  rewrite_default.md
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  pipeline.rs  provider_test.rs  state.rs
src-tauri/src/asr/: glm.rs  groq.rs  macos_native.rs  mod.rs  openai.rs  whisper_cpp.rs
src-tauri/src/asr/aliyun/: client.rs  codec.rs  config.rs  mod.rs
src-tauri/src/asr/doubao/: client.rs  codec.rs  config.rs  mod.rs
src-tauri/src/asr/stepfun/: client.rs  config.rs  mod.rs
src-tauri/src/docs/: backend-guidelines.md
src-tauri/src/llm/: mod.rs
src-tauri/src/managers/: audio.rs  enhance.rs  history.rs  inject.rs  mod.rs  model.rs  transcription.rs
src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
src-tauri/src/platform/macos/: audio_device.rs  capture.rs  clipboard.rs  dock.rs  hotkey.rs  keychain.rs  language.rs  permissions.rs
src-tauri/src/platform/windows/: clipboard.rs  credential.rs  hotkey.rs  language.rs  windows.md
src/components/Overlay/: Capsule.tsx  index.ts
src/components/Settings/: AboutSection.tsx  ConfigSection.tsx  DoubaoSettings.tsx  GeneralSection.tsx  GeneralSections.tsx  HotkeyRecorder.tsx  HotkeySettings.tsx  LocalAsrCard.tsx  LocalLlmCard.tsx  ModelConfigDialog.tsx  ModelSection.tsx  NativeAsrCard.tsx  PermissionRow.tsx  ProviderSection.tsx  ProviderSettings.tsx  SecretField.tsx  SettingSection.tsx  SettingsDialog.tsx  TextSection.tsx  index.ts  localModelRecommendations.ts  models.ts
src/components/Settings/model-config/: KeyInput.tsx  ModelBody.tsx  OptionSelect.tsx  RecommendedLocalModels.tsx  constants.ts  modelConfigActions.ts
src/components/screens/: HistoryScreen.tsx  HomeScreen.tsx  SetupWizard.tsx  homeChart.ts
src/components/screens/setup-wizard/: HotkeyStep.tsx  ModelStep.tsx  PermissionStep.tsx  StepHeader.tsx  StepNav.tsx  TestStep.tsx  WelcomeStep.tsx  progress.ts  types.ts
src/components/shell/: AppShell.tsx  Sidebar.tsx  UpdateButton.tsx  index.ts
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  DevicePicker.tsx  Dialog.tsx  Feedback.tsx  Icon.tsx  IconButton.tsx  Input.tsx  Keycap.tsx  Menu.tsx  Segmented.tsx  Select.tsx  Switch.tsx  index.ts
src/designsystem/: DesignSystemPreview.tsx
src/docs/: frontend-guidelines.md
src/hooks/: index.ts  permissionState.ts  useAudioLevels.ts  useConfiguredModels.ts  useDailyUsage.ts  useHistory.ts  useInputMonitoring.ts  useMicMonitor.ts  usePermissions.ts  useRecordingFlow.ts  useSettings.ts  useUsageStats.ts
src/lib/: open.ts  runtimePlatform.ts  windowsHotkeyCapture.ts
src/store/: index.ts  recording.ts
src/stores/: modelStore.ts
src/styles/tokens/: base.css  colors.css  semantic.css  spacing.css  typography.css
src/types/: events.ts  history.ts  index.ts  settings.ts
tests/: home-chart.test.mjs  model-catalog.test.mjs  onboarding-permissions.test.mjs  release-version.test.mjs  settings-schema.test.mjs  sidebar-version.test.mjs  windows-hotkey-capture.test.mjs
