[package]
name = "audie"
version = "0.0.0"
description = "Cross-platform voice input tool — typeless open-source alternative"
authors = ["aubergine"]
edition = "2021"

[lib]
# `_lib` suffix avoids a name collision with the bin target on Windows.
# See https://github.com/rust-lang/cargo/issues/8519
name = "audie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
tauri-plugin-global-shortcut = "2"
