[package]
name = "audie"
version = "0.0.0"
description = "Cross-platform voice input tool — typeless open-source alternative"
authors = ["aubergine"]
edition = "2021"

[lib]
# `_lib` suffix avoids a name collision with the bin target on Windows.
# See https://github.com/rust-lang/cargo/issues/8519
name = "audie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# User settings persist as a human-editable TOML file (config dir), serialized from
# the Settings struct. serde_json stays for migrating the old tauri-plugin-store.
toml = "0.8"
thiserror = "2"
anyhow = "1"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
# Open external URLs (GitHub repo, author site) in the system browser — Tauri has
# no built-in way; this is the official link-opening plugin.
tauri-plugin-opener = "2"
cpal = "0.15"
# rustls-tls so we don't depend on a system OpenSSL; blocking client runs on
# our own transcription thread (no async runtime needed for P0).
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "multipart",
    "json",
    "rustls-tls",
] }
# Doubao streaming ASR (P2.3+) uses a custom binary frame protocol whose server
# responses are gzip-compressed JSON. Pure-function codec only at P2.3.
flate2 = "1"
# Doubao streaming WebSocket client (P2.5). tokio-tungstenite pulls tokio-rustls
# transitively via the rustls feature, so no separate tokio-rustls dep is needed.
# tokio + futures-util are the mandatory async runtime/traits for the ws client.
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = [
    "connect",
    "handshake",
    "rustls-tls-native-roots",
] }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
# WAV decoding for the dev-only doubao connectivity command (P2.5). Mature crate;
# avoids hand-rolling a WAV parser.
hound = "3"

# macOS-only: CGEvent to simulate the Cmd+V paste keystroke (clipboard inject).
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
# CoreAudio HAL device-transport query: prefer wired/built-in input over
# Bluetooth so AirPods don't blackhole capture into HFP silence (P0.7).
core-foundation = "0.10"
# Microphone TCC status (AVCaptureDevice authorizationStatus under the hood),
# same crate Handy uses. We call its `check_microphone_permission` fn directly.
tauri-plugin-macos-permissions = "2.3.0"
# Hide the dead green zoom traffic light on the fixed-size main window via a
# direct NSWindow msg_send. objc2 0.6 is already in the tree (Tauri depends on it).
objc2 = "0.6"
# Convert the recording overlay into a non-activating NSPanel so clicking the
# capsule buttons (✕/✓) doesn't activate Audie / steal focus from the user's app.
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
security-framework = "3.7.0"
security-framework-sys = "2.17.0"
